# Rust

./: Cargo.toml  README.md  test.c  test.ll
src/: main.rs
src/bfs/: conf.rs  csr.rs  mod.rs  rayon.rs  serial.rs  tester.rs  tree.rs
src/binary_trees/: conf.rs  mod.rs  multiThread.rs  multi_thread.rs  rayon.rs  rayon_bumpalo.rs  serial.rs
src/mandelbrot/: conf.rs  mod.rs  multi_thread.rs  rayon.rs  serial.rs
src/transfer/: 0_base.rs  1_unsafe.rs  2_atomic.rs  3_mutex.rs  4_rtm.rs
src/transfer/cpp/: 1_undet.cpp  2_mutex.cpp  3_rtm.cpp  a.out
