[package]
name = "rust-benchmarks"
version = "0.1.0"
edition = "2021"

[profile.bench]
opt-level = 3
codegen-units = 1

[profile.dev]
opt-level = 3


[dependencies]
futures = "0.3"
async-recursion = "1.0.0"
rayon = "1.5"
tokio = { version = "1", features = ["full"] }
typed-arena = "2.0.1"
bumpalo = "3.9.1"
generic-array = "0.14.5"
num-traits = "0.2.14"
numeric-array = "0.5.2"
queues = "1.1.0"
